[project]
name = "llama3-py"
version = "0.1"
description = "Llama3 implemented in python step by step, from scratch"
requires-python = ">=3.10"

dependencies = [
    "blobfile>=3.0.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub[cli]>=0.34.4",
    "ipykernel>=6.30.1",
    "llama-stack>=0.2.11",
    "matplotlib>=3.10.6",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.56.0",
]
